# py-zed-open-capture

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: wheels.yml
csrc/: bindings.cpp
src/py_zed_open_capture/: __init__.py
tests/: test_import.py
